Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9040

10.1.8 fails after upgrade from 10.0.21

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.1.8
    • 10.1.9
    • Platform RedHat
    • None
    • Centos 6.7 64bit
    • 10.1.9-2

    Description

      After the upgrade via yum the server gets into a restart loop...

      2015-10-28 13:25:06 140165019297824 [Note] Recovering after a crash using tc.log
      2015-10-28 13:25:06 140165019297824 [Note] Starting crash recovery...
      2015-10-28 13:25:06 140165019297824 [Note] Crash recovery finished.
      2015-10-28 13:25:06 140165019297824 [Note] Event Scheduler: Loaded 0 events
      2015-10-28 13:25:06 7f7a109a5700 InnoDB: Error: Column last_update in table "mysql"."innodb_table_stats" is INT UNSIGNED NOT NULL but should be BINARY(4) NOT NULL (type mismatch).
      2015-10-28 13:25:06 7f7a109a5700 InnoDB: Error: Fetch of persistent statistics requested for table "mysql"."gtid_slave_pos" but the required system tables mysql.innodb_table_stats and mysql.innodb_index_stats are not present or have unexpected structure. Using transient stats instead.
      2015-10-28 13:25:06 140165019297824 [Note] /usr/sbin/mysqld: ready for connections.
      Version: '10.1.8-MariaDB-log' socket: '/var/lib/mysql/mysql.sock' port: 0 MariaDB Server
      151028 13:25:06 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.

      To report this bug, see http://kb.askmonty.org/en/reporting-bugs

      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed,
      something is definitely wrong and this may fail.

      Server version: 10.1.8-MariaDB-log
      key_buffer_size=16777216
      read_buffer_size=4194304
      max_used_connections=1
      max_threads=130
      thread_count=0
      It is possible that mysqld could use up to
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 817738 K bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.

      Thread pointer: 0x0x0
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x0 thread_stack 0x48000
      mysys/stacktrace.c:247(my_print_stacktrace)[0x7f7ab6d636cb]
      sql/signal_handler.cc:160(handle_fatal_signal)[0x7f7ab68c50d5]
      /lib64/libpthread.so.0(+0xf790)[0x7f7ab5ede790]
      include/dict0dict.ic:1244(dict_index_get_nth_col)[0x7f7ab6b1557d]
      row/row0purge.cc:850(row_purge_record_func)[0x7f7ab6ae45d5]
      que/que0que.cc:1089(que_thr_step)[0x7f7ab6aaa84f]
      trx/trx0purge.cc:1254(trx_purge(unsigned long, unsigned long, bool))[0x7f7ab6b121e1]
      srv/srv0srv.cc:3432(srv_do_purge)[0x7f7ab6affdc5]
      /lib64/libpthread.so.0(+0x7a51)[0x7f7ab5ed6a51]
      /lib64/libc.so.6(clone+0x6d)[0x7f7ab43bc93d]
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              CypherOz Kym Farnik
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d
                  3d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.