storage/innobase/row/row0ftsort.cc
@@ -1479,7 +1479,7 @@ row_fts_merge_insert(
 		fd[i] = psort_info[i].merge_file[id]->fd;
 		foffs[i] = 0;
 
-		buf[i] = static_cast<unsigned char (*)[65536]>(
+		buf[i] = static_cast<mrec_buf_t*>(
 			mem_heap_alloc(heap, sizeof *buf[i]));
 
 		count_diag += (int) psort_info[i].merge_file[id]->n_rec;
